@@ -7,6 +7,7 @@ ubiquity (2.2.6) UNRELEASED; urgency=low
   * In the KDE frontend, call reboot with root privileges and try
     rebooting via dbus only if a KDE dbus session exists (LP: #540856).
   * Remove the apport hook, it lives in Ubuntu's apport package now.
+  * Don't let the user select both "Try Ubuntu" and "Install Ubuntu".
 
   [ Colin Watson ]
   * If pkgsel/install-language-support is set to false, then don't install
